Add a `+q` flag to verilator, meaning "be quiet"
 On branch master
 Your branch is ahead of 'origin/master' by 3 commits.
   (use "git push" to publish your local commits)

 Changes to be committed:
	modified:   flow/verilator/Makefile
	modified:   flow/verilator/README.md
	modified:   flow/verilator/vl_main.cpp

--- a/flow/verilator/Makefile
+++ b/flow/verilator/Makefile
@@ -49,7 +49,8 @@ $(SIM_EXE) : $(SRC_RTL) $(CPP_FILES)
 run: RTL_TIMEOUT=$(VERILATOR_TIMEOUT)
 run: $(SIM_EXE)
 	@mkdir -p $(dir $(WAVES_FILE))
-	$(SIM_EXE) +TIMEOUT=$(RTL_TIMEOUT) \
+	$(SIM_EXE) +q \
+               +TIMEOUT=$(RTL_TIMEOUT) \
                +IMEM=$(SIM_UNIT_TEST:%.hex=%.srec) \
                +WAVES=$(WAVES_FILE) \
                +PASS_ADDR=$(VERILATOR_PASS_ADDR) \
