Making LIBSCARV a project wide environment variable.
 On branch master
 Your branch is up-to-date with 'origin/master'.

 Changes to be committed:
	modified:   Makefile
	modified:   bin/source.me.sh
	modified:   examples/Makefile
	modified:   examples/helloworld/Makefile
	modified:   examples/mpn/Makefile

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,7 +1,5 @@
 
 
-export LIBSCARV ?= $(XC_HOME)/external/libscarv/build
-
 export CC       = $(RISCV)/bin/riscv64-unknown-elf-gcc
 export AS       = $(RISCV)/bin/riscv64-unknown-elf-as
 export LD       = $(RISCV)/bin/riscv64-unknown-elf-ld
@@ -9,7 +7,7 @@ export X_AS     = $(XC_HOME)/work/riscv-binutils-gdb/build/gas/as-new
 export X_OBJDUMP= $(XC_HOME)/work/riscv-binutils-gdb/build/binutils/objdump
 export X_OBJCOPY= $(XC_HOME)/work/riscv-binutils-gdb/build/binutils/objcopy
 
-export INC_DIR  = -I$(XC_HOME)/examples/common -I$(LIBSCARV)/include
+export INC_DIR  = -I$(XC_HOME)/examples/common -I$(LIBSCARV)/build/include
 
 export ASFLAGS  += -march=rv32imx -mabi=ilp32 
 
