--- a/examples/mpn/Makefile
+++ b/examples/mpn/Makefile
@@ -2,8 +2,8 @@
 TEST_NAME=mpn
 OBJECTS  = $(TGT_DIR)/$(TEST_NAME).o \
            $(TGT_DIR)/boot.o \
-           $(LIBSCARV)/lib/mpn_add.o \
-           $(LIBSCARV)/lib/mpn_sub.o \
-           $(LIBSCARV)/lib/mpn_mul.o \
+           $(LIBSCARV)/build/lib/mpn_add.o \
+           $(LIBSCARV)/build/lib/mpn_sub.o \
+           $(LIBSCARV)/build/lib/mpn_mul.o \
 
 include ../common/common.mk
