Working MPN SW testbench ported from libscarv
 On branch dev/mpn-examples
 Changes to be committed:
	modified:   examples/common/boot.S
	modified:   examples/common/common.h
	modified:   examples/mpn/Makefile
	modified:   examples/mpn/mpn.c
	modified:   rtl/integration/scarv_prv_xcrypt_top.v

--- a/examples/mpn/Makefile
+++ b/examples/mpn/Makefile
@@ -5,5 +5,7 @@ OBJECTS  = $(TGT_DIR)/$(TEST_NAME).o \
            $(LIBSCARV)/build/lib/mpn_add.o \
            $(LIBSCARV)/build/lib/mpn_sub.o \
            $(LIBSCARV)/build/lib/mpn_mul.o \
+           $(LIBSCARV)/build/lib/mpn_cmp.o \
+           $(LIBSCARV)/build/lib/mpn.o \
 
 include ../common/common.mk
