Update libscarv repo and path
 On branch dev/mpn-examples
 Changes to be committed:
	modified:   .gitmodules
	modified:   external/libscarv

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/cliffordwolf/picorv32.git
 [submodule "external/libscarv"]
 	path = external/libscarv
-	url = git@github.com:scarv/sw-libscarv.git
+	url = git@github.com:scarv/libscarv.git
