Update libscarv version & associated changes
- Link examples against libscarv library rather than individual
  object files.
- Remove references to mp_add_xc. Change to mp_add_xc
- MPN tests in examples/mpn program currently fail due to bug
  in mpn_add function. Memory misalignment bug rather than arithmetic
  bug.

 On branch dev/mpn-examples
 Changes to be committed:
	modified:   Makefile
	modified:   examples/helloworld/Makefile
	modified:   examples/helloworld/helloworld.c
	modified:   examples/mpn/Makefile
	modified:   external/libscarv

--- a/examples/mpn/Makefile
+++ b/examples/mpn/Makefile
@@ -2,10 +2,6 @@
 TEST_NAME=mpn
 OBJECTS  = $(TGT_DIR)/$(TEST_NAME).o \
            $(TGT_DIR)/boot.o \
-           $(LIBSCARV)/build/lib/mpn_add.o \
-           $(LIBSCARV)/build/lib/mpn_sub.o \
-           $(LIBSCARV)/build/lib/mpn_mul.o \
-           $(LIBSCARV)/build/lib/mpn_cmp.o \
-           $(LIBSCARV)/build/lib/mpn.o \
+           $(LIBSCARV)/build/lib/libscarv.a
 
 include ../common/common.mk
