--- a/examples/helloworld/Makefile
+++ b/examples/helloworld/Makefile
@@ -3,7 +3,6 @@
 TEST_NAME=helloworld
 OBJECTS  = $(TGT_DIR)/$(TEST_NAME).o \
            $(TGT_DIR)/boot.o \
-           $(LIBSCARV)/build/lib/mpn_add.o \
-           $(LIBSCARV)/build/lib/mpn_add_xc.o
+           $(LIBSCARV)/build/lib/libscarv.a
 
 include ../common/common.mk
