Dump CSV files from benchmark data.
 On branch dev/mpn-examples
 Changes to be committed:
	modified:   Makefile
	modified:   flow/benchmarks/Makefile
	modified:   flow/benchmarks/mpn_plot_perf.py

--- a/flow/benchmarks/Makefile
+++ b/flow/benchmarks/Makefile
@@ -2,7 +2,6 @@
 BWORK       = $(XC_HOME)/work/benchmarks
 
 MPN_OUTPUT  = $(BWORK)/mpn-data-$(LIBSCARV_ARCH).py
-MPN_PLOT    = $(BWORK)/mpn-plot-$(LIBSCARV_ARCH).svg
 MPN_PROCESS = $(XC_HOME)/flow/benchmarks/mpn_plot_perf.py
 
 all: $(BWORK) mpn_benchmark
@@ -13,7 +12,6 @@ $(BWORK):
 clean:
 	rm -rf $(BWORK)
 
-mpn_benchmark: $(MPN_OUTPUT) $(MPN_PLOT)
 
 $(MPN_OUTPUT) :
 	$(VERILATOR_SIM) +q +TIMEOUT=4000000 \
@@ -21,6 +19,7 @@ $(MPN_OUTPUT) :
         +IMEM=/home/ben/scarv/repos/hw-crypto-cop/work/examples/mpn.srec \
         > $@
 
-$(MPN_PLOT) : $(MPN_OUTPUT)
-	cat $(MPN_OUTPUT) $(MPN_PROCESS) | python
-	mv plot*.svg $@
+mpn_benchmark : $(MPN_OUTPUT)
+	echo "arch    = '${LIBSCARV_ARCH}'" >  ${BWORK}/build-info
+	echo "out_dir = '${BWORK}'" >> ${BWORK}/build-info
+	cat $(MPN_OUTPUT) ${BWORK}/build-info $(MPN_PROCESS) | python
