add aes-test in examples target

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -22,8 +22,10 @@ all:
 	$(MAKE) -C integration-test all
 	$(MAKE) -C helloworld all
 	$(MAKE) -C mpn all
+	$(MAKE) -C aes-test all
 
 clean:
 	$(MAKE) -C integration-test clean
 	$(MAKE) -C helloworld clean
 	$(MAKE) -C mpn clean
+	$(MAKE) -C aes-test clean
