Add WIP KeccakP1600 example code.
- C code only for now. No acceleration.
- Bump libscarv

 On branch master
 Your branch is up-to-date with 'origin/master'.

 Changes to be committed:
	modified:   examples/Makefile
	modified:   examples/common/common.h
	new file:   examples/keccakp-1600/Makefile
	new file:   examples/keccakp-1600/keccakp-1600.c
	modified:   examples/keccakp-400/keccakp-400.c
	modified:   external/libscarv

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -24,9 +24,11 @@ all:
 	$(MAKE) -C mpn all
 	$(MAKE) -C aes-test all
 	$(MAKE) -C keccakp-400 all
+	$(MAKE) -C keccakp-1600 all
 
 clean:
 	$(MAKE) -C integration-test clean
 	$(MAKE) -C helloworld clean
 	$(MAKE) -C mpn clean
 	$(MAKE) -C keccakp-400 clean
+	$(MAKE) -C keccakp-1600 clean
