bug of using xc.gather.b in SBOX

--- a/examples/aes-test/Makefile
+++ b/examples/aes-test/Makefile
@@ -2,6 +2,7 @@
 TEST_NAME=aes-test
 OBJECTS  = $(TGT_DIR)/$(TEST_NAME).o \
            $(TGT_DIR)/boot.o \
+		   $(TGT_DIR)/aes_enc_sub_gather.o \
            $(LIBSCARV)/build/lib/libscarv.a
 
 CONF += -DCONF_AES_PRECOMP_RC 
