Adding WIP prince implementation examples.
 On branch master
 Your branch is up-to-date with 'origin/master'.

 Changes to be committed:
	modified:   examples/Makefile
	new file:   examples/prince/Makefile
	new file:   examples/prince/prince.c
	modified:   external/libscarv

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -25,6 +25,7 @@ all:
 	$(MAKE) -C aes-test all
 	$(MAKE) -C keccakp-400 all
 	$(MAKE) -C keccakp-1600 all
+	$(MAKE) -C prince all
 
 clean:
 	$(MAKE) -C integration-test clean
@@ -32,3 +33,4 @@ clean:
 	$(MAKE) -C mpn clean
 	$(MAKE) -C keccakp-400 clean
 	$(MAKE) -C keccakp-1600 clean
+	$(MAKE) -C prince clean
