test 2 implementations of AES encryption: RISCV-ASM, XCRYPTO-AES_ISE

--- a/examples/aes-test/Makefile
+++ b/examples/aes-test/Makefile
@@ -12,6 +12,9 @@ CONF += -DCONF_AES_PRECOMP_MULX
 CONF += -DCONF_AES_ENABLE_ENC
 CONF += -DCONF_AES_ENABLE_DEC
 
+CONF += -DCONF_AES_ENC_EXTERN
+CONF += -DCONF_AES_ROUND_PACK
+
 CFLAGS += $(CONF)
 include ../common/common.mk
 
