test 3 implementations of AES decryption

--- a/examples/aes-test/Makefile
+++ b/examples/aes-test/Makefile
@@ -12,12 +12,12 @@ CONF += -DCONF_AES_PRECOMP_MULX
 CONF += -DCONF_AES_ENABLE_ENC
 CONF += -DCONF_AES_ENABLE_DEC
 
-CONF += -DCONF_AES_ROUND_PACK
+#CONF += -DCONF_AES_ROUND_PACK
 CONF += -DCONF_AES_ENC_EXTERN
 CONF += -DCONF_AES_ENC_XCRYPT
 
-#CONF += -DCONF_AES_DEC_EXTERN
-#CONF += -DCONF_AES_DEC_XCRYPT
+CONF += -DCONF_AES_DEC_EXTERN
+CONF += -DCONF_AES_DEC_XCRYPT
 
 CFLAGS += $(CONF)
 include ../common/common.mk
