SHA2 example program running un-optimised code.
 On branch dev/sha2
 Changes to be committed:
	modified:   examples/Makefile
	modified:   examples/common/boot.S
	modified:   examples/common/common.h
	new file:   examples/sha2/Makefile
	new file:   examples/sha2/sha2.c

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -26,6 +26,7 @@ all:
 	$(MAKE) -C keccakp-400 all
 	$(MAKE) -C keccakp-1600 all
 	$(MAKE) -C prince all
+	$(MAKE) -C sha2 all
 
 clean:
 	$(MAKE) -C integration-test clean
@@ -34,3 +35,4 @@ clean:
 	$(MAKE) -C keccakp-400 clean
 	$(MAKE) -C keccakp-1600 clean
 	$(MAKE) -C prince clean
+	$(MAKE) -C sha2 clean
