MPN example now working with new benchmark flow.
 On branch dev/benchmarking
 Changes to be committed:
	modified:   .gitignore
	new file:   examples/common/benchmark.h
	modified:   examples/common/common.mk
	modified:   examples/mpn/mpn.c
	modified:   flow/benchmarks/Makefile
	modified:   flow/benchmarks/XCBenchmark.py

--- a/flow/benchmarks/Makefile
+++ b/flow/benchmarks/Makefile
@@ -1,6 +1,7 @@
 
 BWORK       = $(XC_HOME)/work/benchmarks
 SREC_DIR    = $(XC_HOME)/work/examples
+BLIB        = $(XC_HOME)/flow/benchmarks/XCBenchmark.py
 
 BENCHMARKS  = mpn aes-test prince sha2 keccakp-1600 keccakp-400
 
@@ -14,7 +15,8 @@ $(BWORK)/%.py : $(SREC_DIR)/%.srec
         +IMEM=$< \
         +STDOUT=$@
 
-$(BWORK)/results-%.txt : $(BWORK)/%.py
+$(BWORK)/results-%.txt : $(BWORK)/%.py $(BLIB)
+	env PATH=$(PATH):$(XC_HOME)/flow/benchmarks \
 	python $< > $@
 
 all: $(BWORK) $(BMARK_STDOUT) $(BMARK_RESULT)
