experimental addition of and clean-up for shared texmf tree

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "external/libscarv"]
 	path = external/libscarv
 	url = git@github.com:scarv/libscarv.git
+[submodule "external/texmf"]
+	path = external/texmf
+	url = https://github.com/scarv/texmf.git
