Benchmark flow: Force Python3 for post-processing
 On branch master
 Your branch is ahead of 'origin/master' by 5 commits.
   (use "git push" to publish your local commits)

 Changes to be committed:
	modified:   examples/mpn/mpn.c
	modified:   flow/benchmarks/Makefile

--- a/flow/benchmarks/Makefile
+++ b/flow/benchmarks/Makefile
@@ -17,7 +17,7 @@ $(BWORK)/%.py : $(SREC_DIR)/%.srec
 
 $(BWORK)/results-%.txt : $(BWORK)/%.py $(BLIB)
 	env PATH=$(PATH):$(XC_HOME)/flow/benchmarks \
-	python $< > $@
+	python3 $< > $@
 
 all: $(BWORK) $(BMARK_STDOUT) $(BMARK_RESULT)
 
