tweaked README.md (to add caveat wrt. use-cases), and Docker configuration (to reorder install) and build (to allow clean)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,7 +11,8 @@ ARG DATE
 LABEL maintainer="SCARV project <info@scarv.org>" date="${DATE}" url="https://github.com/scarv/xcrypto"
 
 RUN apt-get --assume-yes --quiet update \
- && apt-get --assume-yes --quiet install gosu make git gcc autoconf automake autotools-dev curl libmpc-dev libmpfr-dev libgmp-dev libusb-1.0-0-dev gawk build-essential bison flex texinfo gperf libtool patchutils bc zlib1g-dev device-tree-compiler pkg-config libexpat-dev
+ && apt-get --assume-yes --quiet install apt-utils gosu sudo \
+ && apt-get --assume-yes --quiet install make autoconf automake autotools-dev bc bison build-essential curl device-tree-compiler flex gawk gcc git gperf libexpat-dev libgmp-dev libmpc-dev libmpfr-dev libtool libusb-1.0-0-dev patchutils pkg-config texinfo zlib1g-dev
 
 # The build seems to trigger an existing bug, see, e.g., [1], related
 # to the maximum path length supported by the underlying file system: 
