--- a/docker/Makefile
+++ b/docker/Makefile
@@ -9,6 +9,8 @@ DOCKER_TAGS  = latest 0.13.0
 
 build :
 	@docker build $(foreach TAG,${DOCKER_TAGS},--tag ${DOCKER_IMAGE}:${TAG}) --build-arg DATE=$(shell date -u +'%d/%m/%Y-%H:%M:%SZ') --file ./Dockerfile .
+clean :
+	@docker images | grep ${DOCKER_IMAGE} | tr -s ' ' | cut -d' ' -f3 | uniq | xargs --no-run-if-empty docker rmi --force
 push  :
 	@docker push ${DOCKER_IMAGE}
 pull  :
