Add libscarv and xcrypto-rtl submodules
 On branch master
 Your branch is up-to-date with 'origin/master'.

 Changes to be committed:
	modified:   .gitmodules
	new file:   libscarv
	new file:   xcrypto-rtl

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "xcrypto-spec"]
 	path = xcrypto-spec
 	url = git@github.com:scarv/xcrypto-spec.git
+[submodule "xcrypto-rtl"]
+	path = xcrypto-rtl
+	url = https://github.com/scarv/xcrypto-rtl.git
+[submodule "libscarv"]
+	path = libscarv
+	url = https://github.com/scarv/libscarv.git
