--- a/docker/example/Makefile
+++ b/docker/example/Makefile
@@ -4,12 +4,14 @@
 # can be found at https://opensource.org/licenses/MIT (or should be included 
 # as LICENSE.txt within the associated archive or repository).
 
+IMAGE_REPO = $(shell git branch | grep '*' | cut --characters=3- | cut --delimiter='/' --fields=1,2)
+IMAGE_TAG  = $(shell git branch | grep '*' | cut --characters=3- | cut --delimiter='/' --fields=3  )
+
 example.elf : example.c example.h
-	@riscv32-unknown-elf-gcc -o ${@} $(filter %.c, ${?})
+	@${RISCV_XCRYPTO}/bin/riscv32-unknown-elf-gcc -o ${@} $(filter %.c, ${?})
 
 example.sim : example.elf
-	@spike --isa=rv32imac ${RISCV}/riscv32-unknown-elf/bin/pk ${<} > ${@}
-
+	@${RISCV_XCRYPTO}/bin/spike --isa=rv32imac ${RISCV_XCRYPTO}/riscv32-unknown-elf/bin/pk ${<} > ${@}
 
 all      :          example.elf example.sim
 
@@ -17,4 +19,4 @@ clean    :
 	@rm --force example.elf example.sim
 
 %-docker :
-	@docker run --rm --volume ${PWD}:/mnt/scarv/xcrypto --env DOCKER_GID="$(shell id --group)" --env DOCKER_UID="$(shell id --user)" scarv/xcrypto:v0.15.1 ${*}
+	@docker run --rm --volume ${PWD}:/mnt/scarv/xcrypto --env DOCKER_GID="$(shell id --group)" --env DOCKER_UID="$(shell id --user)" --env RISCV_XCRYPTO="/opt/riscv-xcrypto" ${IMAGE_REPO}:${IMAGE_TAG} ${*}
