--- a/docker/Makefile
+++ b/docker/Makefile
@@ -4,21 +4,21 @@
 # can be found at https://opensource.org/licenses/MIT (or should be included 
 # as LICENSE.txt within the associated archive or repository).
 
-IMAGE_REPO = $(shell git branch | grep '*' | cut --characters=3- | cut --delimiter='/' --fields=1,2)
-IMAGE_TAG  = $(shell git branch | grep '*' | cut --characters=3- | cut --delimiter='/' --fields=3  )
+BRANCH      = $(shell git branch | grep '*' | cut --characters=3-)
 
-define date
-  $(shell date -u +'%d/%m/%Y-%H:%M:%SZ')
-endef
+DOCKER_REPO = scarv/xcrypto
+DOCKER_TAG  = $(shell echo ${BRANCH} | cut --delimiter='/' --fields=3)
+
+DATE        = $(shell date -u +'%d/%m/%Y-%H:%M:%SZ')
 
 build :
-	@docker build --tag ${IMAGE_REPO}:${IMAGE_TAG} --build-arg DATE="$(call date)" --build-arg BRANCH="${IMAGE_REPO}/${IMAGE_TAG}" .
+	@docker build --tag ${DOCKER_REPO}:${DOCKER_TAG} --build-arg BRANCH="${BRANCH}" --build-arg DATE="${DATE}" .
 
-clean : 
-	@docker images | grep ${IMAGE_REPO} | grep ${IMAGE_TAG} | tr --squeeze-repeats ' ' | cut --delimiter=' ' --fields=3 | uniq | xargs --no-run-if-empty docker rmi --force
+clean :
+	@docker images | grep ${DOCKER_REPO} | grep ${DOCKER_TAG} | tr --squeeze-repeats ' ' | cut --delimiter=' ' --fields=3 | uniq | xargs --no-run-if-empty docker rmi --force
 
 push  :
-	@docker push ${IMAGE_REPO}:${IMAGE_TAG}
+	@docker push ${DOCKER_REPO}:${DOCKER_TAG}
 
 pull  :
-	@docker pull ${IMAGE_REPO}:${IMAGE_TAG}
+	@docker pull ${DOCKER_REPO}:${DOCKER_TAG}
