update Docker provision and example to match new (master) branch

--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -4,16 +4,18 @@
 # can be found at https://opensource.org/licenses/MIT (or should be included 
 # as LICENSE.txt within the associated archive or repository).
 
+# =============================================================================
+
 FROM ubuntu
 
 ARG DATE
-ARG BRANCH
 
-LABEL maintainer="SCARV project <info@scarv.org>" url="https://github.com/scarv/xcrypto" date="${DATE}" branch="${BRANCH}"
+LABEL maintainer="SCARV project <info@scarv.org>" url="https://github.com/scarv/xcrypto" date="${DATE}" 
+
+# -----------------------------------------------------------------------------
 
 RUN apt-get --assume-yes --quiet update \
- && apt-get --assume-yes --quiet install apt-utils gosu sudo \
- && apt-get --assume-yes --quiet install make autoconf automake autotools-dev bc bison build-essential curl device-tree-compiler flex gawk gcc git gperf libexpat-dev libgmp-dev libmpc-dev libmpfr-dev libtool libusb-1.0-0-dev patchutils pkg-config texinfo zlib1g-dev
+ && apt-get --assume-yes --quiet install apt-utils gettext-base gosu sudo
 
 # The build seems to trigger an existing bug, see, e.g., [1], related to the 
 # maximum path length supported by the underlying file system: we'll create 
@@ -24,15 +26,19 @@ RUN apt-get --assume-yes --quiet update \
 
 ENV RISCV "/opt/riscv-xcrypto"
 
-RUN git clone --branch ${BRANCH} https://github.com/scarv/riscv-tools.git \
+RUN apt-get --assume-yes --quiet install make autoconf automake autotools-dev bc bison build-essential curl device-tree-compiler flex gawk gcc git gperf libexpat-dev libgmp-dev libmpc-dev libmpfr-dev libtool libusb-1.0-0-dev patchutils pkg-config texinfo zlib1g-dev \
+ && git clone https://github.com/scarv/riscv-tools.git \
  && cd ./riscv-tools \
  && git submodule update --init --recursive \
- && ./build-rv32imaxc.sh \
+ && ./build-xcrypto.sh \
  && mv ./riscv-gnu-toolchain/build/build-gdb-newlib/gnulib/confdir3/confdir3 ./bugfix && rm --force --recursive ./bugfix \
  && cd .. \
  && rm --force --recursive ./riscv-tools
 
+# -----------------------------------------------------------------------------
+
 COPY ./entrypoint.sh /usr/sbin/entrypoint.sh
 RUN chmod 755 /usr/sbin/entrypoint.sh
-
 ENTRYPOINT [ "/usr/sbin/entrypoint.sh" ]
+
+# =============================================================================
