Move libscarv -> extern/libscarv
- See #73

 On branch dev/ben/issue-73
 Changes to be committed:
	modified:   .gitmodules
	renamed:    libscarv -> extern/libscarv

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,5 +8,5 @@
 	path = xcrypto-rtl
 	url = https://github.com/scarv/xcrypto-rtl.git
 [submodule "libscarv"]
-	path = libscarv
+	path = extern/libscarv
 	url = https://github.com/scarv/libscarv.git
