Moving XCrypto specification into repo from submodule.
- See #73
- XCrypto specification files for v1.0.0 coppied from submodule into
  top repo and submodule reference deleted.
- Moved XCrypto RTL submodule reference into extern/ for now.
- Added top level makefile.
- Added TEXMFLOCAL variable to bin/conf.sh
- Added extern/texmf subodule.
- Added extern/riscv-opcodes submodule

 On branch dev/ben/issue-73
 Changes to be committed:
	modified:   .gitignore
	modified:   .gitmodules
	new file:   Makefile
	modified:   bin/conf.sh
	new file:   doc/Makefile
	new file:   doc/spec.tex
	new file:   doc/tex/appx-design.tex
	new file:   doc/tex/appx-instr_encode.tex
	new file:   doc/tex/appx-instr_syntax.tex
	new file:   doc/tex/appx-notation.tex
	new file:   doc/tex/appx-related.tex
	new file:   doc/tex/bg-assumption.tex
	new file:   doc/tex/bg-compatibility.tex
	new file:   doc/tex/bg-concept.tex
	new file:   doc/tex/bg-feature.tex
	new file:   doc/tex/bg-guarantee.tex
	new file:   doc/tex/intro.tex
	new file:   doc/tex/spec-exception.tex
	new file:   doc/tex/spec-instruction.tex
	new file:   doc/tex/spec-shared-bitmanip.tex
	new file:   doc/tex/spec-shared-dsp.tex
	new file:   doc/tex/spec-state.tex
	new file:   extern/riscv-opcodes
	new file:   extern/texmf
	renamed:    xcrypto-rtl -> extern/xcrypto-rtl
	deleted:    xcrypto-spec

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
-[submodule "xcrypto-spec"]
-	path = xcrypto-spec
-	url = https://github.com:scarv/xcrypto-spec.git
 [submodule "xcrypto-rtl"]
-	path = xcrypto-rtl
+	path = extern/xcrypto-rtl
 	url = https://github.com/scarv/xcrypto-rtl.git
 [submodule "libscarv"]
 	path = extern/libscarv
 	url = https://github.com/scarv/libscarv.git
+[submodule "extern/texmf"]
+	path = extern/texmf
+	url = https://github.com/scarv/texmf.git
+[submodule "extern/riscv-opcodes"]
+	path = extern/riscv-opcodes
+	url = https://github.com/scarv/riscv-opcodes.git
