Establish masking ISE branch
- Add masking ISE opcodes under tools/opcodes-maskingise
- Add python script bin/parse_opcodes.py to generate binutils patches.
- Add simple assembly test
- Modify binutils patch for multi-operand support and new instructions.

 On branch dev/masking-ise
 Changes to be committed:
	modified:   Makefile
	new file:   bin/parse_opcodes.py
	modified:   src/tests/assembler/Makefile
	new file:   src/tests/assembler/test_masking_ise.S
	modified:   tools/binutils.patch
	new file:   tools/opcodes-maskingise

--- a/src/tests/assembler/Makefile
+++ b/src/tests/assembler/Makefile
@@ -7,6 +7,7 @@ include $(REPO_HOME)/src/tests/common.mk
 
 $(eval $(call add_assembler_target,test_archstr.S))
 $(eval $(call add_assembler_target,test_simple_assembly.S))
+$(eval $(call add_assembler_target,test_masking_ise.S))
 
 all: $(ALL_TARGETS)
 
