--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -29,12 +29,8 @@ ENV RISCV "/opt/riscv-xcrypto"
 RUN apt-get --assume-yes --quiet install make autoconf automake autotools-dev bc bison build-essential curl device-tree-compiler flex gawk gcc git gperf libexpat-dev libgmp-dev libmpc-dev libmpfr-dev libtool libusb-1.0-0-dev patchutils pkg-config texinfo zlib1g-dev \
  && git clone --branch dev/ben/issue-73 https://github.com/scarv/xcrypto.git ./xcrypto \
  && cd ./xcrypto \
- && . ./bin/conf.sh && ${REPO_HOME}/tools/clone.sh \
- && for COMPONENT in binutils gcc newlib pk spike ; do \
-      ${REPO_HOME}/tools/${COMPONENT}-apply.sh    ;    \
-      ${REPO_HOME}/tools/${COMPONENT}-conf.sh     ;    \
-      ${REPO_HOME}/tools/${COMPONENT}-build.sh    ;    \
-    done                                               \
+ && . ./bin/conf.sh \
+ && make --directory="./tools" build \
  && mv ./build/toolchain/riscv-binutils-build/gnulib/confdir3/confdir3 ./bugfix && rm --force --recursive ./bugfix \
  && cd .. \
  && rm --force --recursive ./xcrypto
