--- a/src/docker/Makefile
+++ b/src/docker/Makefile
@@ -19,11 +19,29 @@ export DOCKER_FLAGS = --env RISCV_XCRYPTO="/opt/riscv-xcrypto"
 
 # -----------------------------------------------------------------------------
 
+${REPO_HOME}/build/docker/Dockerfile    : ${REPO_HOME}/src/docker/Dockerfile
+	@cp ${<} ${@}
+${REPO_HOME}/build/docker/entrypoint.sh : ${REPO_HOME}/src/docker/entrypoint.sh
+	@cp ${<} ${@}
+
+BUILD_FILES  = ${REPO_HOME}/build/docker/Dockerfile
+BUILD_FILES += ${REPO_HOME}/build/docker/entrypoint.sh
+
+BUILD_PATHS  = ${REPO_HOME}/build/docker
+
+${BUILD_PATHS} :
+	@mkdir --parents ${@}
+
+${CLEAN_PATHS} :
+	@rm --force --recursive ${@}
+
+# =============================================================================
+
 build : ${BUILD_PATHS} ${BUILD_FILES}
-	@docker build --tag ${DOCKER_REPO}:${DOCKER_TAG} --build-arg DATE="$(shell date -u +'%d/%m/%Y-%H:%M:%SZ')" .
+	@docker build --tag ${DOCKER_REPO}:${DOCKER_TAG} --build-arg DATE="$(shell date -u +'%d/%m/%Y-%H:%M:%SZ')" ${REPO_HOME}/build/${ARCH}/docker
 
 clean : ${CLEAN_PATHS}
-	@docker images | grep ${DOCKER_REPO} | grep ${DOCKER_TAG} | tr --squeeze-repeats ' ' | cut --delimiter=' ' --fields=3 | uniq | xargs --no-run-if-empty docker rmi --force
+	@docker images | grep ${DOCKER_REPO} | grep ${DOCKER_TAG} | tr --squeeze-repeats ' ' | cut --delimiter=' ' --fields=3 | uniq | xargs --no-run-if-empty docker rmi --force && rm --force --recursive ${BUILD_PATHS}
 
 push  :
 	@docker push ${DOCKER_REPO}:${DOCKER_TAG}
