--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -30,7 +30,7 @@ RUN apt-get --assume-yes --quiet install make autoconf automake autotools-dev bc
  && git clone --branch dev/ben/issue-73 https://github.com/scarv/xcrypto.git ./xcrypto \
  && cd ./xcrypto \
  && . ./bin/conf.sh \
- && make --directory="./tools" build \
+ && make --directory="./tools" clone build \
  && mv ./build/toolchain/riscv-binutils-build/gnulib/confdir3/confdir3 ./bugfix && rm --force --recursive ./bugfix \
  && cd .. \
  && rm --force --recursive ./xcrypto
