minor post-merge reorganise (e.g., tools -> src/toolchain); updates wrt. move of content into wiki

--- a/src/toolchain/Makefile
+++ b/src/toolchain/Makefile
@@ -17,17 +17,17 @@ COMPONENTS = binutils gcc newlib pk spike
 
 define rule_build
 $(strip ${1})-build  :
-	@$${REPO_HOME}/tools/$(strip ${1})-apply.sh
-	@$${REPO_HOME}/tools/$(strip ${1})-conf.sh
-	@$${REPO_HOME}/tools/$(strip ${1})-build.sh
+	@$${REPO_HOME}/src/toolchain/$(strip ${1})-apply.sh
+	@$${REPO_HOME}/src/toolchain/$(strip ${1})-conf.sh
+	@$${REPO_HOME}/src/toolchain/$(strip ${1})-build.sh
 endef
 define rule_update
 $(strip ${1})-update :
-	@$${REPO_HOME}/tools/$(strip ${1})-update.sh
+	@$${REPO_HOME}/src/toolchain/$(strip ${1})-update.sh
 endef
 define rule_revert
 $(strip ${1})-revert :
-	@$${REPO_HOME}/tools/$(strip ${1})-revert.sh
+	@$${REPO_HOME}/src/toolchain/$(strip ${1})-revert.sh
 endef
 
 $(foreach COMPONENT,${COMPONENTS},$(eval $(call rule_build, ${COMPONENT})))
@@ -35,7 +35,7 @@ $(foreach COMPONENT,${COMPONENTS},$(eval $(call rule_update,${COMPONENT})))
 $(foreach COMPONENT,${COMPONENTS},$(eval $(call rule_revert,${COMPONENT})))
 
 clone  : 
-	@${REPO_HOME}/tools/clone.sh
+	@${REPO_HOME}/src/toolchain/clone.sh
 
 build  : $(foreach COMPONENT, ${COMPONENTS}, ${COMPONENT}-build )
 
@@ -44,6 +44,6 @@ update : $(foreach COMPONENT, ${COMPONENTS}, ${COMPONENT}-update)
 revert : $(foreach COMPONENT, ${COMPONENTS}, ${COMPONENT}-revert)
 
 clean  :
-	@rm --force --recursive ${REPO_HOME}/build/tools
+	@rm --force --recursive ${REPO_HOME}/build/toolchain
 
 # =============================================================================
