pre-allocate (sub)sections for leakage-related content

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -13,7 +13,7 @@ endif
 
 # =============================================================================
 
-BUILD = ${REPO_HOME}/build/spec
+BUILD = ${REPO_HOME}/build/doc
 
 ${BUILD}/spec.version :
 	@echo ${REPO_VERSION} > ${@}
